--- a/recovery/root/init.recovery.mt6785.rc
+++ b/recovery/root/init.recovery.mt6785.rc
@@ -1,53 +1,125 @@
 import /init.microtrust.rc
-
+import /init.custom.rc
+    
 on init
-    export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw:/system/lib64/hw
+    setprop sys.usb.configfs 1
+    setprop sys.usb.controller "musb-hdrc"
+    setprop sys.usb.ffs.aio_compat 0
+    export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw
+    setprop crypto.ready 1
+
+on fs && property:ro.debuggable=0
+    write /sys/class/udc/musb-hdrc/device/cmode
+    start adbd
+
+on fs
+    install_keyring
+    wait /dev/block/platform/soc/11230000.mmc
+    symlink /dev/block/platform/soc/11230000.mmc /dev/block/bootdevice
+
+# We need vold early for metadata encryption
+on early-fs
+    start vold
+
+on late-fs
+    # Mount RW partitions which need run fsck
+    mount_all /first_stage_ramdisk/fstab.mt6768 --late
+
+on post-fs
+    start boot-hal-1-2
+
+    symlink /dev/block/mapper/pl_a /dev/block/by-name/preloader_raw_a
+    symlink /dev/block/mapper/pl_b /dev/block/by-name/preloader_raw_b
+
+on boot
+    start mtk.plpath.utils.link
+
+on property:persist.vendor.mtk.pl_lnk=1
+    symlink /dev/block/mapper/pl_a /dev/block/by-name/preloader_raw_a
+    symlink /dev/block/mapper/pl_b /dev/block/by-name/preloader_raw_b
+    symlink /dev/block/mapper/pl_a /dev/block/platform/bootdevice/by-name/preloader_raw_a
+    symlink /dev/block/mapper/pl_b /dev/block/platform/bootdevice/by-name/preloader_raw_b
+
+# FSTAB_RAW2(lk2,bootloader2) of fstab.in.emmc, but without bootloader2 mount point
+    symlink /dev/block/by-name/lk_a /dev/block/by-name/bootloader1
+    symlink /dev/block/by-name/lk_b /dev/block/by-name/bootloader2
+
+# Fix ro.vendor.mtk_ufs_support remove issue of recovery mode
+on property:vendor.mtk.boot0_linka=1
+    symlink /dev/block/sda /dev/block/mmcblk0boot0
+
+on property:vendor.mtk.boot0_linkb=1
+    symlink /dev/block/sdb /dev/block/mmcblk0boot0
+
+on property:vendor.mtk.boot0_linkc=1
+    symlink /dev/block/sdc /dev/block/mmcblk0boot0
+
+on property:vendor.mtk.boot1_linka=1
+    symlink /dev/block/sda /dev/block/mmcblk0boot1
+
+on property:vendor.mtk.boot1_linkb=1
+    symlink /dev/block/sdb /dev/block/mmcblk0boot1
+
+on property:vendor.mtk.boot1_linkc=1
+    symlink /dev/block/sdc /dev/block/mmcblk0boot1
 
 on post-fs
     # Support A/B feature for EMMC and UFS boot region
-    wait /dev/block/mmcblk0boot0 2
     symlink /dev/block/sda /dev/block/mmcblk0boot0
     symlink /dev/block/sdb /dev/block/mmcblk0boot1
     symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
-    # Support A/B feature for combo emmc and ufs OTA update
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_emmc_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_emmc_b
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_ufs_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_ufs_b
-
-    # Support A/B feature for combo emmc and ufs OTA update
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/by-name/preloader_emmc_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/by-name/preloader_emmc_b
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/by-name/preloader_ufs_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/by-name/preloader_ufs_b
-
-    symlink /dev/block/platform/bootdevice /dev/block/bootdevice
-
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
     start mtk.plpath.utils.link
 
-on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
+on fs
+    mkdir /mnt/vendor 0700 root root
+    mkdir /mnt/vendor/protect_f 0700 root root
+    mkdir /mnt/vendor/protect_s 0700 root root
+    mkdir /mnt/vendor/nvdata 0700 root root
+    mkdir /mnt/vendor/nvcfg 0700 root root
+    mkdir /mnt/vendor/persist 0700 root root
+    mount ext4 /dev/block/by-name/protect1 /mnt/vendor/protect_f
+    mount ext4 /dev/block/by-name/protect2 /mnt/vendor/protect_s
+    mount ext4 /dev/block/by-name/nvdata /mnt/vendor/nvdata
+    mount ext4 /dev/block/by-name/nvcfg /mnt/vendor/nvcfg
+    mount ext4 /dev/block/by-name/persist /mnt/vendor/persist
+    symlink /mnt/vendor/protect_f /vendor/protect_f
+    symlink /mnt/vendor/protect_s /vendor/protect_s
+    symlink /mnt/vendor/nvcfg /vendor/nvcfg
+    symlink /mnt/vendor/nvdata /vendor/nvdata
+    
     install_keyring
 
-service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
+service mtk.plpath.utils.link /vendor/bin/mtk_plpath_utils
     class main
     user root
     group root system
     disabled
     oneshot
     seclabel u:r:recovery:s0
+    
+service keystore_auth /vendor/bin/keystore_auth
+    oneshot
+    user system
+    group root
+    disabled
+    seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
-    interface android.hardware.gatekeeper@1.0::IGatekeeper default
+service keystore /vendor/bin/keystore /tmp/misc/keystore
+    user root
+    group root drmrpc readproc log
+    disabled
+    seclabel u:r:recovery:s0
+
+service vendor.gatekeeper-1-0 /vendor/bin/hw/android.hardware.gatekeeper@1.0-service
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod
-    interface android.hardware.keymaster@4.0::IKeymasterDevice default
+service vendor.keymaster-4-0-beanpod /vendor/bin/hw/android.hardware.keymaster@4.0-service.beanpod
     user root
     group root drmrpc
     disabled
@@ -56,6 +128,41 @@ service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod
 
 on property:vendor.sys.listener.registered=true
     start gatekeeper-1-0
+
+on property:crypto.ready=1
+    start vendor.keymaster-4-0-beanpod
+
+on property:hwservicemanager.ready=true
+    start teei_daemon
+    start vendor.gatekeeper-1-0
+    start vendor.keymaster-4-0-beanpod
+
+on property:ro.crypto.state=unsupported
+    stop teei_daemon
+    stop vendor.gatekeeper-1-0
+    stop vendor.keymaster-4-0-beanpod
+
+on property:ro.crypto.state=unencrypted
+    stop teei_daemon
+    stop vendor.gatekeeper-1-0
+    stop vendor.keymaster-4-0-beanpod
+
+on property:twrp.decrypt.done=true
+    stop teei_daemon
+    stop vendor.gatekeeper-1-0
+    stop vendor.keymaster-4-1-trustonic
+
+on property:crypto.ready=0
+    stop teei_daemon
+    stop vendor.gatekeeper-1-0
+    stop vendor.keymaster-4-0-beanpod
+
+on post-fs-data
+    mkdir /data/vendor_de 0770 system system
+    mkdir /data/vendor_de/0 0770 system system
+    mkdir /data/vendor_de/0/cryptoeng 0770 system system
+
+on property:hwservicemanager.ready=true
     start keymaster-4-0
     start gatekeeper-1-0
    
@@ -63,28 +170,17 @@ on property:ro.crypto.state=unsupported
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
-    
+      
 on property:ro.crypto.state=unencrypted
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
-        
+
 on property:twrp.all.users.decrypted=true
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
-   
+    
 on boot
-    start boot-hal-1-2
+    start boot-hal-1-1
     start health-hal-2-1
-    start vibrator-radiant
-
-# Fix flashlight on orangefox
-on property:ro.orangefox.boot=1
-    mkdir /tmp/flashlight
-    write /tmp/flashlight/max_brightness "208"
-    symlink /sys/devices/platform/flashlights_mt6360/torch_brightness /tmp/flashlight/brightness
-
-# Enable DT2W
-on post-fs
-    write /sys/devices/platform/11007000.i2c0/i2c-0/0-0038/fts_gesture_mode "1"
