--- a/.github/workflows/X695C.yml
+++ b/.github/workflows/X695C.yml
@@ -1,4 +1,4 @@
-name: Radiant
+name: Infinix-X695C
 
 on:
   workflow_dispatch:
@@ -22,7 +22,7 @@ on:
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/infinix/radiant'
+        default: 'device/infinix/X695C'
       COMMON_TREE_URL:
         description: 'COMMON_TREE_URL (if no common tree, leave blank)'
         required: false
@@ -32,11 +32,11 @@ on:
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'radiant'
+        default: 'X695C'
       MAKEFILE_NAME:
         description: 'MAKEFILE_NAME'
         required: true
-        default: 'twrp_radiant'
+        default: 'twrp_X695C'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
