--- a/.github/workflows/X695C_PB.yml
+++ b/.github/workflows/X695C_PB.yml
@@ -13,7 +13,7 @@ on:
       MANIFEST_BRANCH:
         description: 'Manifest Branch'
         required: true
-        default: ''
+        default: 'android-11'
         type: choice
         options:
         - android-12.1
